[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-typed-models"
description = "Sane single table model inheritance for Django"
readme = "README.md"
dynamic = ["version"]
authors = [{ name = "Craig de Stigter", email = "craig@destigter.nz" }]
license = "BSD-3-Clause"
license-files = ["LICENSE.txt"]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]
dependencies = ["django_stubs_ext", "typing-extensions"]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/craigds/django-typed-models"

[tool.hatch.version]
path = "typedmodels/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["typedmodels"]

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = ["testapp/migrations"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = [
    "E501",  # line too long - let formatter handle it where possible
]

[tool.ruff.lint.per-file-ignores]
"typedmodels/tests.py" = ["E721"]  # type() == Class comparisons are intentional in tests
